# ir_hid

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: ir.cpp  main.c  uart.c  uart.h  usb.c  usb.h  usbconfig.h
web/src/: App.svelte  hid_consumer.js  hid_keyboard.js
